<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btnJugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jugar"/>
        <Button
            android:id="@+id/btnHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"/>
        <Button
            android:id="@+id/btnEstad"
            android:text="@string/estad"/>
        <Button
            android:id="@+id/btnAbout"
            android:text="@string/info"/>

    </TableLayout>

</RelativeLayout>