<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="@+id/numeros">

    <LinearLayout
        android:id="@+id/opciones"
        android:background="#F3F781"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F781"
            android:gravity="center"
            android:text="@string/pista"
            android:textSize="16sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/hint"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"/>
        <LinearLayout
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="3sp"/>
            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cero"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="3sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tablero"
        android:orientation="vertical"
        android:layout_below="@id/opciones"
        android:background="@drawable/border">
    </LinearLayout>
    <TableLayout
        android:id="@+id/numeros"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tablero"
        android:background="#F3F781"
        android:shrinkColumns="*">
        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uno">
            </Button>
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos">
            </Button>
            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres">
            </Button>
            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:text="@string/cuatro"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:text="@string/cinco"
                android:layout_height="wrap_content">
            </Button>
        </TableRow>
        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seis">
            </Button>
            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siete">
            </Button>
            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocho">
            </Button>
            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nueve">
            </Button>
            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/backspace"
                >
            </Button>
        </TableRow>
    </TableLayout>

</RelativeLayout>